docs-archive/apache-airflow-providers-common-ai/0.4.0/_sources/_api/airflow/providers/common/ai/example_dags/example_agent/index.rst.txt
airflow.providers.common.ai.example_dags.example_agent
======================================================

.. py:module:: airflow.providers.common.ai.example_dags.example_agent

.. autoapi-nested-parse::

   Example DAGs demonstrating AgentOperator, @task.agent, and toolsets.



Classes
-------

.. autoapisummary::

   airflow.providers.common.ai.example_dags.example_agent.Analysis


Functions
---------

.. autoapisummary::

   airflow.providers.common.ai.example_dags.example_agent.example_agent_operator_sql
   airflow.providers.common.ai.example_dags.example_agent.example_agent_operator_hook
   airflow.providers.common.ai.example_dags.example_agent.example_agent_decorator
   airflow.providers.common.ai.example_dags.example_agent.example_agent_structured_output
   airflow.providers.common.ai.example_dags.example_agent.example_agent_chain
   airflow.providers.common.ai.example_dags.example_agent.example_agent_operator_hitl_review


Module Contents
---------------

.. py:class:: Analysis(/, **data)

   Bases: :py:obj:`pydantic.BaseModel`


   Structured analysis output for the agent example.


   .. py:attribute:: summary
      :type:  str


   .. py:attribute:: top_items
      :type:  list[str]


   .. py:attribute:: row_count
      :type:  int


.. py:function:: example_agent_operator_sql()

.. py:function:: example_agent_operator_hook()

.. py:function:: example_agent_decorator()

.. py:function:: example_agent_structured_output()

.. py:function:: example_agent_chain()

.. py:function:: example_agent_operator_hitl_review()

   AgentOperator with HITL review — a human approves output via hitl-review plugin UI.


